--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<div shiro:hasPermission="user:add">
+<div >
     用户添加：<a href="add">用户添加</a>
 </div>
     <br>
-<div shiro:hasPermission="user:update">
+<div >
     用户更新：<a href="update">用户更新</a>
 </div>
 </body>
